# relay-dedup

./: .gitignore  .prettierignore  Cargo.toml  README.md  package.json
.github/workflows/: ci.yml  release.yml
scripts/: build-all.sh  postinstall.js
src/: lib.rs  main.rs  naming.rs  normalize.rs  relay_config.rs  tree.rs  writer.rs
tests/: integration.rs
tests/fixtures/input/: FileOne.graphql.ts  FileThree.graphql.ts  FileTwo.graphql.ts
