[package]
name = "relay-dedup"
version = "0.1.0"
edition = "2021"
authors = ["Fellow <engineering@fellow.app>"]
description = "A CLI tool to deduplicate Relay-generated artifact files"
repository = "https://github.com/fellowapp/relay-dedup"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
md-5 = "0.10"
flate2 = "1"
anyhow = "1"
serde_json = "1"
rayon = "1"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"

[[bin]]
name = "relay-dedup"
path = "src/main.rs"

[lib]
name = "relay_dedup"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true

